--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -105,16 +105,18 @@ flex-wrap: wrap;
 /**** mise en place des plus populaires et hebergements***/
 section{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     width: 100%;
     margin: 0;
-    padding: 0;
 }
 .container .container-2{
     display: flex;
     flex-wrap: wrap;
     margin: 0px 10px;
     padding: 0px 10px;
+}
+.hebergements h2{
+    padding-left: 20px;
 }
 .hebergements{
     width: 100%;
@@ -125,18 +127,18 @@ section{
     height: auto;
 }
 .plus{
-    margin: 10px 5px;
+    margin: 10px 0px;
 }
 .location{
     width: 100%;
+    margin: 10px 0px;
 }
 .populaires{
-    order: -2;
    width: 100%;
    background-color: #F2F2F2;
    border-radius: 0;
   margin: 0;
-  padding: 0;
+  padding: 0 20px;
 }
 
 /*** Activités à Marseille ***/
@@ -152,10 +154,10 @@ section{
 }
 .annonces-activites{
     width: 100%;
-    margin: 10px 30px;
+    margin: 10px 20px;
 }
 #activites{
-    margin: 0 0 0 30px;
+    margin-left: 20px;
 }
 .grandformat{
     width: 100%;
@@ -180,16 +182,21 @@ section{
 .footer{
 display: flex;
 flex-direction: column;
-padding: 0 30px;
+padding: 0 20px;
 }
 .footer-gauche, .footer-centre, .footer-droite{
     width: 100%;
     margin: 0px;
 }
 }
-/***Resolution Tablette***/
+/************************Resolution Tablette************************/
 
 @media only screen and (min-width: 600px) and (max-width: 1023px){
+    /***marges header***/
+    .header{ 
+        margin-left: 0px;
+        margin-right: 0px;
+    }
     /***mise en place des filtres ***/
     h3.filters{
         margin-right: 30px;
@@ -228,10 +235,13 @@ padding: 0 30px;
        overflow-x: hidden;
        padding: 0;
    }
+   .entete{
+       padding: 0px 20px;
+   }
    .container-2{
        flex-direction: row;
        width: 100%;
-       padding: 10px 10px 20px 10px;
+       padding: 10px 8px 20px 8px;
        margin: 0;
    }
    .location-pop{
@@ -283,6 +293,10 @@ padding: 0 30px;
    .titre-photo p{
        margin: 0;
        padding: 10px;
+   }
+   /*** mise ne forme du footer***/
+   .footer{
+       padding: 0px 30px;
    }
    
 }
