--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -1,74 +1,73 @@
 /*** Résolition pour mobile ***/
 @media only screen and (max-width: 599px) {
-  body, main{
+  body,
+  main {
     margin: 0;
-   
   }
-  main{
-      padding: 0;
+  main {
+    padding: 0;
   }
-    .header{
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      margin: 0px; 
-    }
-    .navbar{
-      flex-direction: row;
-      flex-wrap: wrap;
-      width: 100%;
-    }
-    .logo{
-    order: 1;  
+  .header {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 0px;
+  }
+  .navbar {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .logo {
+    order: 1;
     margin-left: 20px;
-    }
-    .logo img{
-        border-radius: 0px;
-    }
-    .signin {
-        order: 2;
-        margin-right: 20px;
-    }
-    .header-nav{
+  }
+  .logo img {
+    border-radius: 0px;
+  }
+  .signin {
+    order: 2;
+    margin-right: 20px;
+  }
+  .header-nav {
     display: flex;
     width: 100%;
     margin: 0px;
     order: 3;
     padding-top: 20px;
-    
-}
- .header-nav a {
+  }
+  .header-nav a {
     display: flex;
     justify-content: center;
     width: 50%;
-    border-bottom: 2px solid #F2F2F2;
+    border-bottom: 2px solid #f2f2f2;
     padding-bottom: 30px;
-}
-.header-nav a:hover{
+  }
+  .header-nav a:hover {
     border-top: none;
-    border-bottom: 2px solid #0065FC;  
-    padding: 0 0 30px 0; 
-}
-.logo .signin{
+    border-bottom: 2px solid #0065fc;
+    padding: 0 0 30px 0;
+  }
+  .logo .signin {
     display: flex;
     flex-direction: row;
-}
-.title{
-   margin: 0px 20px;
-}
-.subtitle{
-margin: 10px 20px;
-}
-/*** mise en place icone rechercher et ajustement barre de recherche***/
-.search{
+  }
+  .title {
+    margin: 0px 20px;
+  }
+  .subtitle {
     margin: 10px 20px;
-}
-.button{
+  }
+  /*** mise en place icone rechercher et ajustement barre de recherche***/
+  .search {
+    margin: 10px 20px;
+  }
+  .button {
     display: none;
-}
-.button_icon{
+  }
+  .button_icon {
     border-radius: 1rem 1rem 1rem 1rem;
-    background-color: #0065FC;
+    background-color: #0065fc;
     color: white;
     width: 50px;
     height: 50px;
@@ -76,227 +75,226 @@ margin: 10px 20px;
     align-items: center;
     justify-content: center;
     margin-left: -15px;
-}
-.searchbar{
+  }
+  .searchbar {
     width: 70%;
+  }
 
-}
-
-/*** filtres ***/
-.filtres{
+  /*** filtres ***/
+  .filtres {
     display: flex;
     flex-wrap: wrap;
     margin: 10px 20px;
-    
-}
-.categories{
-display: flex;
-flex-wrap: wrap;
-}
-.name{
+  }
+  .categories {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .name {
     padding: 10px 4px;
-}
-.border-filter{
+  }
+  .border-filter {
     margin-right: 0px;
-}
- .info{
-     margin: 0px 20px;
- }
-/**** mise en place des plus populaires et hebergements***/
-section{
+  }
+  .info {
+    margin: 0px 20px;
+  }
+  /**** mise en place des plus populaires et hebergements***/
+  section {
     display: flex;
     flex-direction: column-reverse;
     width: 100%;
     margin: 0;
-}
-.container .container-2{
+  }
+  .container .container-2 {
     display: flex;
     flex-wrap: wrap;
     margin: 0px 10px;
     padding: 0px 10px;
-}
-.hebergements h2{
+  }
+  .hebergements h2 {
     padding-left: 20px;
-}
-.hebergements{
+  }
+  .hebergements {
     width: 100%;
     background-color: white;
     border-radius: 0;
     margin: 0;
     padding: 0;
     height: auto;
-}
-.plus{
+  }
+  .plus {
     margin: 10px 0px;
-}
-.location{
+  }
+  .location {
     width: 100%;
     margin: 10px 0px;
-}
-.populaires{
-   width: 100%;
-   background-color: #F2F2F2;
-   border-radius: 0;
-  margin: 0;
-  padding: 0 20px;
-}
+  }
+  .populaires {
+    width: 100%;
+    background-color: #f2f2f2;
+    border-radius: 0;
+    margin: 0;
+    padding: 0 20px;
+  }
 
-/*** Activités à Marseille ***/
-.bloc-activites{
+  /*** Activités à Marseille ***/
+  .bloc-activites {
     width: 100%;
     align-items: center;
-}
-.container-activites{
+  }
+  .container-activites {
     align-items: center;
     margin: 0;
     width: 100%;
     height: auto;
-}
-.annonces-activites{
+  }
+  .annonces-activites {
     width: 100%;
     margin: 10px 20px;
-}
-#activites{
+  }
+  #activites {
     margin-left: 20px;
-}
-.grandformat{
-    width: 100%;
-   height: 16em;
-   margin: 10px 0;
-}
-.grandformat img{
-   height: 80%;
-}
-.petitformat{
+  }
+  .grandformat {
     width: 100%;
     height: 16em;
     margin: 10px 0;
-}
-.petitformat img{
+  }
+  .grandformat img {
     height: 80%;
-}
-.titre-photo p{
+  }
+  .petitformat {
+    width: 100%;
+    height: 16em;
+    margin: 10px 0;
+  }
+  .petitformat img {
+    height: 80%;
+  }
+  .titre-photo p {
     margin: 0;
     padding: 10px;
-}
-.footer{
-display: flex;
-flex-direction: column;
-padding: 0 20px;
-}
-.footer-gauche, .footer-centre, .footer-droite{
+  }
+  .footer {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+  }
+  .footer-gauche,
+  .footer-centre,
+  .footer-droite {
     width: 100%;
     margin: 0px;
-}
+  }
 }
 /************************Resolution Tablette************************/
 
-@media only screen and (min-width: 600px) and (max-width: 1023px){
-    /***marges header***/
-    .header{ 
-        margin-left: 0px;
-        margin-right: 0px;
-    }
-    /***mise en place des filtres ***/
-    h3.filters{
-        margin-right: 30px;
-    }
-    .categories{
-        flex-wrap: wrap;
-    }
-   .name{
-       margin: 10px 0;
-       padding: 0;
-   }
-   .border-filter{
-       margin: 10px;
-   }
-   /*** Mise en place de Populaires et Hébergements ***/
-   section{
+@media only screen and (min-width: 600px) and (max-width: 1023px) {
+  /***marges header***/
+  .header {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  /***mise en place des filtres ***/
+  h3.filters {
+    margin-right: 30px;
+  }
+  .categories {
+    flex-wrap: wrap;
+  }
+  .name {
+    margin: 10px 0;
+    padding: 0;
+  }
+  .border-filter {
+    margin: 10px;
+  }
+  /*** Mise en place de Populaires et Hébergements ***/
+  section {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin: 0;
     padding: 0;
-   }
-   .container .container-2{
+  }
+  .container .container-2 {
     display: flex;
     flex-wrap: wrap;
     margin: 0px 10px;
     padding: 0px 10px;
-   width: 100%;
-   justify-content: space-between;
-}
-   .populaires{
-       order: 1;
-       width: 100%;
-       display: flex;
-       flex-direction: column;
-       overflow-x: hidden;
-       padding: 0;
-   }
-   .entete{
-       padding: 0px 20px;
-   }
-   .container-2{
-       flex-direction: row;
-       width: 100%;
-       padding: 10px 8px 20px 8px;
-       margin: 0;
-   }
-   .location-pop{
-       width: 22em;
-       padding: 5px;
-       margin: 5px;
-   }
-   .img-pop{
-       width: 7em;
-
-   }
-   .text-pop{
-       justify-content: space-between;
-       margin-left: 10px;
-   }
-   .hebergements{
-       order: 2;
-       width: 100%;
-       margin: 20px 0;   
-   }
-   .hebergements h2{
-       padding-left: 20px;
-   }
-   .location{
-       width: 45%;
-   }
-   /*** mise en forme d'activites à Marseille ***/
-   .container-activites{
-       display: flex;
-       flex-direction: row;
-       justify-content: space-between;
-       width: 67%;
-       height: 20em;
-   }
-   .petitformat img, .grandformat img{
+    width: 100%;
+    justify-content: space-between;
+  }
+  .populaires {
+    order: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    padding: 0;
+  }
+  .entete {
+    padding: 0px 20px;
+  }
+  .container-2 {
+    flex-direction: row;
+    width: 100%;
+    padding: 10px 8px 20px 8px;
+    margin: 0;
+  }
+  .location-pop {
+    width: 22em;
+    padding: 5px;
+    margin: 5px;
+  }
+  .img-pop {
+    width: 7em;
+  }
+  .text-pop {
+    justify-content: space-between;
+    margin-left: 10px;
+  }
+  .hebergements {
+    order: 2;
+    width: 100%;
+    margin: 20px 0;
+  }
+  .hebergements h2 {
+    padding-left: 20px;
+  }
+  .location {
+    width: 45%;
+  }
+  /*** mise en forme d'activites à Marseille ***/
+  .container-activites {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 67%;
+    height: 20em;
+  }
+  .petitformat img,
+  .grandformat img {
     height: 80%;
     width: 100%;
-   }
-   .petitformat{
-       height: 18em;
-       width: 100%;
-       margin: 10px;
-   }
-   .grandformat{
+  }
+  .petitformat {
+    height: 18em;
+    width: 100%;
+    margin: 10px;
+  }
+  .grandformat {
     height: 18em;
     width: 30%;
     margin-top: 10px;
-   }
-   .titre-photo p{
-       margin: 0;
-       padding: 10px;
-   }
-   /*** mise ne forme du footer***/
-   .footer{
-       padding: 0px 30px;
-   }
-   
+  }
+  .titre-photo p {
+    margin: 0;
+    padding: 10px;
+  }
+  /*** mise ne forme du footer***/
+  .footer {
+    padding: 0px 30px;
+  }
 }
