--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -190,7 +190,7 @@
 }
 /************************Resolution Tablette************************/
 
-@media only screen and (min-width: 600px) and (max-width: 1023px) {
+@media only screen and (min-width: 600px) and (max-width: 1036px) {
   /***marges header***/
   .header {
     margin-left: 0px;
@@ -224,7 +224,7 @@
     margin: 0px 10px;
     padding: 0px 10px;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   .populaires {
     order: 1;
@@ -242,9 +242,10 @@
     width: 100%;
     padding: 10px 8px 20px 8px;
     margin: 0;
+    justify-content: space-around;
   }
   .location-pop {
-    width: 22em;
+    width: 25em;
     padding: 5px;
     margin: 5px;
   }
@@ -263,8 +264,14 @@
   .hebergements h2 {
     padding-left: 20px;
   }
+  .hebergements img{
+    height: 55%;
+  }
   .location {
     width: 45%;
+  }
+  .plus{
+    padding: 0px 10px 20px;
   }
   /*** mise en forme d'activites à Marseille ***/
   .container-activites {
