--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a {
 .title {
   /*propriètes du titre*/
   margin: 20px 0;
-  font-size: 20px;
+  font-size: 22px;
 }
 .subtitle {
   /*propriètes du sous-titre*/
@@ -96,7 +96,7 @@ a {
 input {
   font-family: "Raleway";
   color: black;
-  font-size: 16px;
+  font-size: 18px;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -118,8 +118,8 @@ input {
   font-family: "Raleway";
   background-color: #0065fc;
   border: solid 2px transparent;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 18px;
+  font-weight: 500;
   border-radius: 0rem 1rem 1rem 0rem;
   padding: 0rem 1rem 0rem 1rem;
   text-align: center;
@@ -139,7 +139,7 @@ input {
   align-items: baseline;
 }
 h3.filters {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   margin-right: 50px;
 }
@@ -157,7 +157,11 @@ h3.filters {
 }
 
 .filtercategory {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  width: 52px;
+  height: 52px;
   margin-right: 10px;
   padding: 5px;
   border: solid 10px transparent;
@@ -168,8 +172,12 @@ h3.filters {
   border-bottom-left-radius: 50px;
   border-bottom-right-radius: 50px;
 }
+.filtercategory p{
+  margin: 12px 0px;
+}
 
 .border-filter {
+  display: flex;
   align-items: center;
   margin-right: 50px;
   padding: 0px 20px 0px 0px;
@@ -195,7 +203,7 @@ h3.filters {
   border-radius: 1rem;
 }
 p {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 /******************************* propriètés du main *******************************/
@@ -216,9 +224,9 @@ section {
 }
 h3 {
   /*propriètés de h3*/
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
-  margin-top: 10px;
+  margin: 10px 0px 0px 0px;
 }
 .hebergements {
   /*propriètés de la section hebergements*/
@@ -229,7 +237,7 @@ h3 {
   margin-right: 20px;
 }
 .hebergements h2 {
-  font-size: 20px;
+  font-size: 22px;
   padding-top: 10px;
   padding-left: 30px;
 }
@@ -239,7 +247,7 @@ h3 {
   border-radius: 2em 2em 0em 0em;
   padding: 5px;
   width: 100%;
-  height: 50%;
+  height: 52%;
   object-fit: cover;
 }
 article {
@@ -269,12 +277,16 @@ article {
   align-items: flex-start;
   padding: 0 15px;
   margin: 0;
+  font-size: 12px;
+}
+.text p{
+  margin: 10px 0px;
 }
 /*proprietes afficher plus*/
 .plus {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
-  margin: 10px 5px;
+  margin: 0px 30px;
 }
 /******************************* propriètés de la partie populaire *******************************/
 .container-2 {
@@ -290,7 +302,7 @@ article {
   width: 30%;
 }
 .populaires h2 {
-  font-size: 20px;
+  font-size: 22px;
   padding-top: 10px;
 }
 .entete {
@@ -323,10 +335,11 @@ article {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
+  font-size: 12px;
 }
 .text-pop h3 {
   /*proprietes de la legende pop*/
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
 }
 /******************************* Activités à Marseille *******************************/
@@ -340,7 +353,7 @@ article {
   width: 100%;
 }
 #activites {
-  font-size: 20px;
+  font-size: 22px;
 }
 .annonces-activites {
   display: flex;
@@ -385,7 +398,7 @@ article {
 .titre-photo p {
   display: flex;
   align-items: center;
-  font-size: 16px;
+  font-size: 18px;
   padding: 20px;
 }
 .grandformat,
@@ -414,7 +427,7 @@ footer {
   margin: 20px 0;
 }
 h4 {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: bold;
 }
 ul {
@@ -423,6 +436,6 @@ ul {
 }
 li {
   list-style-type: none;
-  font-size: 14px;
+  font-size: 16px;
   padding: 10px 0;
 }
