--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ main {
   margin: 0;
   padding: 0 30px;
 }
+.container-width{
+  max-width: 1440px;
+  width: 100%;
+  margin: auto;
+}
 /**************** propriètés du header ****************/
 
 .header {
@@ -203,7 +208,8 @@ h3.filters {
   border-radius: 1rem;
 }
 p {
-  font-size: 16px;
+  font-size: 18px;
+  margin: 10px 0px;
 }
 
 /******************************* propriètés du main *******************************/
@@ -226,7 +232,7 @@ h3 {
   /*propriètés de h3*/
   font-size: 18px;
   font-weight: bold;
-  margin: 10px 0px 0px 0px;
+  margin: 7px 0px 0px 0px;
 }
 .hebergements {
   /*propriètés de la section hebergements*/
@@ -247,7 +253,7 @@ h3 {
   border-radius: 2em 2em 0em 0em;
   padding: 5px;
   width: 100%;
-  height: 52%;
+  height: 55%;
   object-fit: cover;
 }
 article {
@@ -272,10 +278,8 @@ article {
 }
 .text {
   /*alignement legendes des hotels*/
-  display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding: 0 15px;
+  padding: 5px 15px;
   margin: 0;
   font-size: 12px;
 }
@@ -330,7 +334,7 @@ article {
 }
 .text-pop {
   /*alignement de la legende pop*/
-  margin-left: 20px;
+  padding-left: 8px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -341,6 +345,9 @@ article {
   /*proprietes de la legende pop*/
   font-size: 18px;
   font-weight: bold;
+}
+.text-pop p{
+  margin: 10px 0px;
 }
 /******************************* Activités à Marseille *******************************/
 .bloc-activites {
